other-vpol/restrict-binding-clusteradmin/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-binding-clusteradmin
policies:
- ../restrict-binding-clusteradmin.yaml
resources:
- ../.chainsaw-test/crb-bad.yaml
- ../.chainsaw-test/crb-good.yaml
- ../.chainsaw-test/rb-bad.yaml
- ../.chainsaw-test/rb-good.yaml
results:
- policy: restrict-binding-clusteradmin
  isValidatingPolicy: true
  kind: ClusterRoleBinding
  resources:
  - badcrb01
  - badcrb02
  result: fail
- policy: restrict-binding-clusteradmin
  isValidatingPolicy: true
  kind: ClusterRoleBinding
  resources:
  - goodcrb01
  - goodcrb02
  result: pass
- policy: restrict-binding-clusteradmin
  isValidatingPolicy: true
  kind: RoleBinding
  resources:
  - badrb01
  result: fail
- policy: restrict-binding-clusteradmin
  kind: RoleBinding
  resources:
  - badrb02
  result: fail
- policy: restrict-binding-clusteradmin
  isValidatingPolicy: true
  kind: RoleBinding
  resources:
  - goodrb01
  - goodrb02
  result: pass
